Bug 199233 - Crash when sending a message in an AIM chat
Summary: Crash when sending a message in an AIM chat
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-07 06:41 UTC by Josh Berry
Modified: 2009-07-25 20:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Berry 2009-07-07 06:41:37 UTC
Application that crashed: kopete
Version of the application: 0.70.90
KDE Version: 4.3.60 (KDE 4.3.60 (KDE 4.4 >= 20090624))
Qt Version: 4.5.2
Operating System: Linux 2.6.30-rc7-custom x86_64

What I was doing when the application crashed:
Steps to reproduce:
1. Join an AIM chat with another user
2. Try to send a message.
3. Immediately on sending the message, Kopete crashes with the included backtrace.

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 0 (LWP 28382)]

Thread 4 (Thread 0x7f27c5001910 (LWP 28407)):
#0  0x00007f27d7860e99 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f27d7ad133b in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007f27d8e1434c in ?? () from /usr/lib/libQtNetwork.so.4
#3  0x00007f27d7ad0285 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f27d785c59a in start_thread () from /lib/libpthread.so.0
#5  0x00007f27d6022c3d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f27c42a7910 (LWP 28408)):
#0  0x00007f27d601a543 in poll () from /lib/libc.so.6
#1  0x00007f27d242d34c in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#2  0x00007f27d242d690 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f27d7bddf1e in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#4  0x00007f27d7bb42c2 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#5  0x00007f27d7bb4694 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#6  0x00007f27c8e41473 in QCA::SyncThread::run () from /usr/lib/libqca.so.2
#7  0x00007f27d7ad0285 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f27d785c59a in start_thread () from /lib/libpthread.so.0
#9  0x00007f27d6022c3d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f27c3aa6910 (LWP 28409)):
#0  0xffffffffff600167 in ?? ()
#1  0x00007fffe57d4671 in ?? ()
#2  0x00007f27d26b6eaf in clock_gettime () from /lib/librt.so.1
#3  0x00007f27d7bdf9ed in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f27d7bdfbe1 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f27d7be10a3 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f27d7bde09d in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f27d242cd8a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0x00007f27d242d161 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#9  0x00007f27d242d690 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0x00007f27d7bddf1e in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#11 0x00007f27d7bb42c2 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#12 0x00007f27d7bb4694 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#13 0x00007f27c921b8b3 in XMPP::SyncThread::run (this=0x2942910) at /btrfs/current/kde4-git/kdenetwork/kopete/protocols/jabber/libiris/iris/irisnet/corelib/netinterface.cpp:151
#14 0x00007f27d7ad0285 in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007f27d785c59a in start_thread () from /lib/libpthread.so.0
#16 0x00007f27d6022c3d in clone () from /lib/libc.so.6
#17 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f27dbad0760 (LWP 28382)):
[KCrash Handler]
#5  Kopete::Contact::metaContact (this=0x0) at /btrfs/current/kde4-git/kdenetwork/kopete/libkopete/kopetecontact.cpp:445
#6  0x0000000000425192 in ContactStalker::messageAppended (this=0x2b89770, message=@0x7fffe56c2950, session=<value optimized out>)
    at /btrfs/current/kde4-git/kdenetwork/kopete/kopete/kopetedbusinterface_p.cpp:83
#7  0x0000000000425490 in ContactStalker::qt_metacall (this=0x2b89770, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffe56c27d0)
    at /btrfs/current/kde4-git/build/kdenetwork/kopete/kopete/kopetedbusinterface_p.moc:77
#8  0x00007f27d7bcaa8c in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#9  0x00007f27da7de337 in Kopete::ChatSessionManager::display (this=0x0, _t1=<value optimized out>, _t2=0x30181b0)
    at /btrfs/current/kde4-git/build/kdenetwork/kopete/libkopete/kopetechatsessionmanager.moc:159
#10 0x00007f27da7de5ca in Kopete::ChatSessionManager::qt_metacall (this=0x2506f80, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffe56c2920)
    at /btrfs/current/kde4-git/build/kdenetwork/kopete/libkopete/kopetechatsessionmanager.moc:95
#11 0x00007f27d7bcaa8c in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#12 0x00007f27da7dba10 in Kopete::ChatSession::messageAppended (this=0x0, _t1=<value optimized out>, _t2=0x30181b0)
    at /btrfs/current/kde4-git/build/kdenetwork/kopete/libkopete/kopetechatsession.moc:237
#13 0x00007f27da7de188 in Kopete::TemporaryKMMCallbackAppendMessageHandler::handleMessage (this=0x3c89a90, event=0x34d3db0)
    at /btrfs/current/kde4-git/kdenetwork/kopete/libkopete/kopetechatsession.cpp:220
#14 0x00007f27ca3cd99e in HistoryMessageLogger::handleMessage (this=0x3888eb0, event=0x34d3db0) at /btrfs/current/kde4-git/kdenetwork/kopete/plugins/history/historyplugin.cpp:105
#15 0x00007f27da7f39b2 in Kopete::ProcessMessageTask::qt_metacall (this=0x3676000, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /btrfs/current/kde4-git/build/kdenetwork/kopete/libkopete/kopetemessagehandlerchain.moc:112
#16 0x00007f27d7bcaa8c in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#17 0x00007f27d7bcfacf in ?? () from /usr/lib/libQtCore.so.4
#18 0x00007f27d7bc4a43 in QObject::event () from /usr/lib/libQtCore.so.4
#19 0x00007f27d6bf0e1c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#20 0x00007f27d6bf80ee in QApplication::notify () from /usr/lib/libQtGui.so.4
#21 0x00007f27d874d1d0 in KApplication::notify (this=0x7fffe56c33e0, receiver=0x38cb5d0, event=0x7fffe56c30b0) at /btrfs/current/kde4-git/kdelibs/kdeui/kernel/kapplication.cpp:302
#22 0x00007f27d7bb59bc in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#23 0x00007f27d7be1012 in ?? () from /usr/lib/libQtCore.so.4
#24 0x00007f27d7bddf7d in ?? () from /usr/lib/libQtCore.so.4
#25 0x00007f27d2429dbe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x00007f27d242d568 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#27 0x00007f27d242d690 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0x00007f27d7bddec6 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#29 0x00007f27d6c83d4e in ?? () from /usr/lib/libQtGui.so.4
#30 0x00007f27d7bb42c2 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#31 0x00007f27d7bb4694 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#32 0x00007f27d7bb6849 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#33 0x000000000041522f in main (argc=<value optimized out>, argv=<value optimized out>) at /btrfs/current/kde4-git/kdenetwork/kopete/kopete/main.cpp:104

Reported using DrKonqi
Comment 1 Roman Jarosz 2009-07-25 20:27:56 UTC
SVN commit 1002350 by rjarosz:

Don't crash when message.from() is 0.

BUG: 199233


 M  +1 -1      kopetedbusinterface_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1002350
Comment 2 Roman Jarosz 2009-07-25 20:28:30 UTC
SVN commit 1002351 by rjarosz:

Backport commit 1002350.
Don't crash when message.from() is 0.

CCBUG: 199233



 M  +1 -1      kopetedbusinterface_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1002351