Don't crash when message.from() is 0.

BUG: 199233

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1002350